--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-in-memory-web-api": "^0.6.1",
     "arr-flatten": "^1.1.0",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
